--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Your brain can grow 1,200 new synapses per day. Precision psychiatry + neuroplasticity = depression gone in 21 days instead of 21 months. Here’s the 5-step rewiring protocol.">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://myndworkspsychiatry.com/blog/precision-psychiatry-neuroplasticity.html" />
+    <link rel="canonical" href="https://precision-psychiatry-neuroplasticity.onrender.com" />
+    <meta name="google-site-verification" content="e5THqres6eKzvG0PwGXUeXk8TUTOVYFp-c43wB4qg_I" />
     <title>Precision Psychiatry × Neuroplasticity: Rewire Your Brain in 21 Days</title>
 
     <meta property="og:title" content="Grow a New Brain in 21 Days (Science Inside)">
